Prevent scrollbar from shifting centered content :lipstick:

--- a/defaults/coricamu.css
+++ b/defaults/coricamu.css
@@ -2,6 +2,10 @@ body {
   font-family: sans-serif;
   font-size: 1em;
   background-color: #eee7d7;
+
+  /* Prevent scrollbar from making centered content shift */
+  margin-right: 5px;
+  margin-left: calc(100vw - 100% + 5px);
 }
 
 body > * {
